[gd_scene load_steps=2 format=3 uid="uid://dpausmenu123"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(800, 500)

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="LeftSide" type="VBoxContainer" parent="CenterContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Spacer2" type="Control" parent="CenterContainer/PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="Spacer3" type="Control" parent="CenterContainer/PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ExitButton" type="Button" parent="CenterContainer/PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_font_sizes/font_size = 24
text = "Exit to Menu"

[node name="Separator" type="VSeparator" parent="CenterContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="RightSide" type="VBoxContainer" parent="CenterContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsTitle" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "STATS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Max HP: 100"

[node name="HPRegenLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "HP Regen: 2.0/s"

[node name="DamageLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Damage: 10"

[node name="ProjectilesLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Projectiles: 1"

[node name="AttackSpeedLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Attack Speed: 1.0/s"

[node name="MoveSpeedLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Move Speed: 250"

[node name="DefenseLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Defense: 20%"

[node name="LifestealLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Lifesteal: 10%"

[node name="LuckLabel" type="Label" parent="CenterContainer/PanelContainer/HBoxContainer/RightSide/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Luck: 1.0x"